making at least 60% progress on light effect

--- a/BlindMaze/BlindMaze.vcxproj
+++ b/BlindMaze/BlindMaze.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Entity.hpp" />
     <ClInclude Include="EntityManager.hpp" />
+    <ClInclude Include="Physics.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="ScenePlay.h" />
     <ClInclude Include="Vec2.hpp" />
