--- a/BlindMaze/BlindMaze.vcxproj.filters
+++ b/BlindMaze/BlindMaze.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Vec2.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
