finishing settings configuration, user can edit this configuration.

--- a/BlindMaze/res/config/levels.ini
+++ b/BlindMaze/res/config/levels.ini
@@ -1,3 +1,4 @@
-res/world/Level_1.json
-res/world/Level_2.json
-res/world/Level_3.json
+res/world/Level_1.png
+res/world/Level_2.png
+res/world/Level_3.png
+res/world/Level_4.png
